# a-sentence-chunker-library

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  NEWS.md  NOTICE  README.md  _config.yml  build.sh
.changes/: 0.1.1.md
include/a-sentence-chunker-library/: a_sentence_chunker.h
samples/: sentences.json
src/: a_sentence_chunker.c
tests/: CMakeLists.txt
tests/src/: chunker.c
texts/: google_story.txt
